Update jlink, jmod, jimage, jar CLI options